All default.properties files are now rewritten by the main pom file (centralized configuration )

--- a/discovery/discovery-core/src/main/resources/default.properties
+++ b/discovery/discovery-core/src/main/resources/default.properties
@@ -1,5 +1,6 @@
 ######################################
 # Triplestore Access Information
 ######################################
-discovery.sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-discovery.sesame.reposid = msee
+discovery.sesame.endpoint = ${discovery.endpoint}
+discovery.sesame.reposid = ${discovery.repo}
+
