--- a/invoker/invoker-core/src/main/resources/default.properties
+++ b/invoker/invoker-core/src/main/resources/default.properties
@@ -1,20 +1,5 @@
 ######################################
 # Triplestore Access Information
 ######################################
-sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-sesame.reposid = sesaRepo
-
-
-
-##
-## TODO: move this seperately
-##
-
-endpoint.servicename = ReverseStringWebService
-
-endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
-
-triplestore.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-triplestore.reposid = wsmf
-
-instance.prefixuri = http://sti2.at/wsmf/instances#
+invoker.sesame.endpoint = ${invoker.sesame.endpoint}
+invoker.sesame.reposid = ${invoker.sesame.reposid}
