--- a/management/management-core/pom.xml
+++ b/management/management-core/pom.xml
@@ -11,6 +11,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+<!--  Remove repos ? should be in parent... -->
         <repositories>
                 <repository>
                         <id>sti-snapshots</id>
@@ -24,12 +25,20 @@
                 </repository>
         </repositories>
 
+
+
+
         <name>management-core</name>
         <url>http://maven.apache.org</url>
 
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        </properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
 
         <dependencies>
                 <dependency>
