--- a/management/management-core/src/main/resources/default.properties
+++ b/management/management-core/src/main/resources/default.properties
@@ -1,5 +1,5 @@
 ######################################
 # Triplestore Access Information
 ######################################
-sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-sesame.reposid = sesaRepo
+management.sesame.endpoint = ${management.sesame.endpoint}
+management.sesame.reposid = ${management.sesame.reposid}
