--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -3,13 +3,11 @@
 ###########################
 
 
-endpoint.servicename = ReverseStringWebService
+monitoring.endpoint.servicename = ${monitoring.endpoint.servicename}
 
-endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
+monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
 
-triplestore.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-triplestore.reposid = wsmf
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
 
-instance.prefixuri = http://sti2.at/wsmf/instances#
-
-maventest = $abc
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
