--- a/registration/registration-core/src/main/resources/default.properties
+++ b/registration/registration-core/src/main/resources/default.properties
@@ -1,6 +1,6 @@
 ######################################
 # Triplestore Access Information
 ######################################
-sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
+registration.sesame.endpoint = ${registration.sesame.endpoint}
 #sesame.endpoint = http://localhost/openrdf-sesame
-sesame.reposid = msee
+registration.sesame.reposid = ${registration.sesame.reposid}
