--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -13,32 +13,39 @@
 	</parent>
 
 
+
 	<name>registration-core</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
 
-	<dependencies>   
+
+	<dependencies>
 		<dependency>
 			<groupId>at.sti2.ngsee.registration</groupId>
 			<artifactId>registration-api</artifactId>
 			<scope>compile</scope>
-		</dependency> 
-				<dependency>
+		</dependency>
+		<dependency>
 			<groupId>at.sti2.ngsee.util</groupId>
 			<artifactId>util-triplestore-client</artifactId>
 		</dependency>
-		
 
 
 
-		
-		
 
 
-	<dependency>
+
+
+
+		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>saxon</artifactId>
 			<version>8.7</version>
@@ -47,10 +54,10 @@
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>saxon-dom</artifactId>
 			<version>8.7</version>
-					</dependency>	
-	
+		</dependency>
 
-		
+
+
 
 		<dependency>
 			<groupId>wsdl4j</groupId>
@@ -64,45 +71,33 @@
 			<version>1.1</version>
 		</dependency>
 
-						<dependency>
+		<dependency>
 			<groupId>edu.uga.cs.lsdis</groupId>
 			<artifactId>SAWSDL4J</artifactId>
 			<version>M4</version>
 		</dependency>
-				
-	
-					<dependency>
+
+
+		<dependency>
 			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-wsdl</artifactId>
 			<version>2.1</version>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-ext-sawsdl</artifactId>
 			<version>2.1</version>
 		</dependency>
-<dependency>
+		<dependency>
 			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-ext-wsdl4complexwsdl</artifactId>
 			<version>2.1</version>
 		</dependency>
-<!-- 
-		<dependency>
-			<groupId>org.openrdf</groupId>
-			<artifactId>openrdf-sail-inferencer</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf</groupId>
-			<artifactId>openrdf-sail-api</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf</groupId>
-			<artifactId>openrdf-sail-memory</artifactId>
-			<version>2.0.1</version>
-		</dependency>
- -->
+		<!-- <dependency> <groupId>org.openrdf</groupId> <artifactId>openrdf-sail-inferencer</artifactId> 
+			<version>2.0.1</version> </dependency> <dependency> <groupId>org.openrdf</groupId> 
+			<artifactId>openrdf-sail-api</artifactId> <version>2.0.1</version> </dependency> 
+			<dependency> <groupId>org.openrdf</groupId> <artifactId>openrdf-sail-memory</artifactId> 
+			<version>2.0.1</version> </dependency> -->
 	</dependencies>
 </project>
 
