--- a/discovery/discovery-webservice/pom.xml
+++ b/discovery/discovery-webservice/pom.xml
@@ -80,7 +80,7 @@
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
 							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-								<port>9090</port>
+								<port>${discovery.ws.port}</port>
 								<maxIdleTime>60000</maxIdleTime>
 							</connector>
 						</connectors>
