--- a/invoker/invoker-webservice/pom.xml
+++ b/invoker/invoker-webservice/pom.xml
@@ -79,7 +79,7 @@
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
 							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-								<port>9090</port>
+								<port>${invoker.ws.port}</port>
 								<maxIdleTime>60000</maxIdleTime>
 							</connector>
 						</connectors>
