Moved ranking framework under util folder (renamed to ranking-framework)

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>
 		<module>util-triplestore-client</module>
+		<module>ranking-framework</module>
 	</modules>
 
 	<name>util-project</name>
