--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee</groupId>
+	<groupId>at.sti2.msee</groupId>
 	<artifactId>sesa-project</artifactId>
 	<version>1.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
