--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
 	<name>sesa-project</name>
 	<url>http://sesa.sti2.at</url>
 
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<cxf.version>2.4.1</cxf.version>
@@ -62,7 +61,6 @@
 
 		<ranking.ws.port>9128</ranking.ws.port>
 	</properties>
-
 
 	<profiles>
 		<profile>
@@ -113,7 +111,6 @@
 			<url>http://maven.sti2.at/archiva/repository/external</url>
 		</repository>
 	</distributionManagement>
-
 
 	<scm>
 		<connection>scm:git:git@sesa.sti2.at:sesa-core.git</connection>
@@ -321,6 +318,20 @@
 					</configuration>
 				</plugin>
 
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<configuration>
+						<war>./discovery/discovery-webservice/target/discovery-webservice.war</war>
+						<scanIntervalSeconds>10</scanIntervalSeconds>
+						<connectors>
+							<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+								<port>${discovery.ws.port}</port>
+								<maxIdleTime>60000</maxIdleTime>
+							</connector>
+						</connectors>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
