--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -19,9 +19,6 @@
 		<module>discovery-webservice</module>
 	</modules>
 
-
-
-
 	<name>discovery-project</name>
 	<url>http://sesa.sti2.at</url>
 
@@ -32,58 +29,8 @@
 		<axis.version>1.5.4</axis.version>
 	</properties>
 
-	<issueManagement>
-		<system>Sourceforge</system>
-		<url>http://sesa.sti2.at</url>
-	</issueManagement>
-
-	<organization>
-		<name>Semantic Technology Institute Innsbruck</name>
-		<url>http://sesa.sti2.at</url>
-	</organization>
-
-	<developers>
-		<developer>
-			<name>Michael Rogger</name>
-		</developer>
-		<developer>
-			<name>Alex Oberhauser</name>
-		</developer>
-		<developer>
-			<name>Corneliu Stanciu</name>
-		</developer>
-		<developer>
-			<name>Benjamin Hiltpolt</name>
-		</developer>
-	</developers>
-
-	<!-- DEPENDENCY MANAGEMENT -->
 	<dependencyManagement>
 		<dependencies>
-
-			<!-- PROJECTS -->
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>discovery-api</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>discovery-core</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>discovery-webservice</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>at.sti2.msee.util</groupId>
-				<artifactId>util-triplestore-client</artifactId>
-				<version>1.2-SNAPSHOT</version>
-			</dependency>
-
-			<!-- LIBARIES -->
 			<!-- cxf -->
 			<dependency>
 				<groupId>org.apache.cxf</groupId>
@@ -138,63 +85,58 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2.1</version>
-					<configuration>
-						<descriptors>
-							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>true</appendAssemblyId>
-						<attach>true</attach>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+			
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-assembly-plugin</artifactId> -->
+<!-- 					<version>2.2.1</version> -->
+<!-- 					<configuration> -->
+<!-- 						<descriptors> -->
+<!-- 							<descriptor>src/assembly/jaxws-jar.xml</descriptor> -->
+<!-- 						</descriptors> -->
+<!-- 						<appendAssemblyId>true</appendAssemblyId> -->
+<!-- 						<attach>true</attach> -->
+<!-- 					</configuration> -->
+<!-- 					<executions> -->
+<!-- 						<execution> -->
+<!-- 							<id>make-assembly</id> -->
+<!-- 							<phase>package</phase> -->
+<!-- 							<goals> -->
+<!-- 								<goal>single</goal> -->
+<!-- 							</goals> -->
+<!-- 						</execution> -->
+<!-- 					</executions> -->
+<!-- 				</plugin> -->
 
-				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.1</version>
-					<configuration>
-						<!-- settings.xml needs <server>...</server> with username/credentials. 
-							see http://mojo.codehaus.org/tomcat-maven-plugin/configuration.html -->
-						<server>sesa-tomcat6</server>
-						<url>http://sesa.sti2.at:8080/manager</url>
-					</configuration>
-				</plugin>
+<!-- 				<plugin>use mvn tomcat:deploy or mvn tomcat:undeploy -->
+<!-- 					<groupId>org.codehaus.mojo</groupId> -->
+<!-- 					<artifactId>tomcat-maven-plugin</artifactId> -->
+<!-- 					<version>1.1</version> -->
+<!-- 					<configuration> -->
+<!-- 						settings.xml needs <server>...</server> with username/credentials. -->
+<!-- 							see http://mojo.codehaus.org/tomcat-maven-plugin/configuration.html --> 
+<!-- 						<server>sesa-tomcat6</server> -->
+<!-- 						<url>http://sesa.sti2.at:8080/manager</url> -->
+<!-- 					</configuration> -->
+<!-- 				</plugin> -->
 
-				<plugin>
-					<groupId>org.apache.cxf</groupId>
-					<artifactId>cxf-java2ws-plugin</artifactId>
-					<version>${cxf.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-jaxws</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-simple</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-					</dependencies>
-				</plugin>
-
-				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.10</version>
-				</plugin>
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.cxf</groupId> -->
+<!-- 					<artifactId>cxf-java2ws-plugin</artifactId> -->
+<!-- 					<version>${cxf.version}</version> -->
+<!-- 					<dependencies> -->
+<!-- 						<dependency> -->
+<!-- 							<groupId>org.apache.cxf</groupId> -->
+<!-- 							<artifactId>cxf-rt-frontend-jaxws</artifactId> -->
+<!-- 							<version>${cxf.version}</version> -->
+<!-- 						</dependency> -->
+<!-- 						<dependency> -->
+<!-- 							<groupId>org.apache.cxf</groupId> -->
+<!-- 							<artifactId>cxf-rt-frontend-simple</artifactId> -->
+<!-- 							<version>${cxf.version}</version> -->
+<!-- 						</dependency> -->
+<!-- 					</dependencies> -->
+<!-- 				</plugin> -->
 
 			</plugins>
 		</pluginManagement>
