--- a/monitoring/monitoring-jsonservice/pom.xml
+++ b/monitoring/monitoring-jsonservice/pom.xml
@@ -150,23 +150,23 @@
 				<groupId>org.glassfish</groupId>
 				<artifactId>maven-embedded-glassfish-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.mortbay.jetty</groupId> -->
+<!-- 				<artifactId>maven-jetty-plugin</artifactId> -->
 
-				<configuration>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>9990</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
+<!-- 				<configuration> -->
+<!-- 					<connectors> -->
+<!-- 						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> -->
+<!-- 							<port>9990</port> -->
+<!-- 							<maxIdleTime>60000</maxIdleTime> -->
+<!-- 						</connector> -->
+<!-- 					</connectors> -->
 
-					<webApp>${basedir}/target/jsonwebservice.war</webApp>
-					<contextPath>monitoringjson</contextPath>
+<!-- 					<webApp>${basedir}/target/monitoring-json-webservice.war</webApp> -->
+<!-- 					<contextPath>monitoringjson</contextPath> -->
 
-				</configuration>
-			</plugin>
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>xslt-maven-plugin</artifactId>
