--- a/registration/registration-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/registration/registration-webservice/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
         </servlet>
         <servlet-mapping>
                 <servlet-name>WebServicePort</servlet-name>
-                <url-pattern>/services/*</url-pattern>
+                <url-pattern>/*</url-pattern>
         </servlet-mapping>
         <session-config>
                 <session-timeout>60</session-timeout>
