--- a/pom.xml
+++ b/pom.xml
@@ -311,7 +311,7 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
 					<configuration>
-						<url>${tomcatserver.url</url>
+						<url>${tomcatserver.url}</url>
 						<username>${tomcatserver.username}</username>
 						<password>${tomcatserver.password}</password>
 					</configuration>
