--- a/discovery/discovery-core/src/main/resources/default.properties
+++ b/discovery/discovery-core/src/main/resources/default.properties
@@ -1,6 +1,6 @@
 ######################################
 # Triplestore Access Information
 ######################################
-discovery.sesame.endpoint = ${discovery.endpoint}
+discovery.sesame.endpoint = ${discovery.sesame.endpoint}
 discovery.sesame.reposid = ${discovery.repo}
 
