--- a/pom.xml
+++ b/pom.xml
@@ -30,36 +30,39 @@
 		<!-- Tomcat settings -->
 		<!-- at the bottom of this page! -->
 
+		<msee.sdp.port>8080</msee.sdp.port>
+		<msee.sdp.sesame.endpoint>http://localhost:8082/openrdf-sesame</msee.sdp.sesame.endpoint>
+
 		<!-- Discovery properties -->
 		<discovery.repo>msee</discovery.repo>
-		<discovery.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</discovery.endpoint>
-		<discovery.ws.port>9123</discovery.ws.port>
+		<discovery.sesame.endpoint>${msee.sdp.sesame.endpoint}</discovery.sesame.endpoint>
+		<discovery.ws.port>${msee.sdp.port}</discovery.ws.port>
 
 		<!-- Monitoring properties -->
 		<monitoring.endpoint.servicename>ServiceName</monitoring.endpoint.servicename>
 		<monitoring.endpoint.namespace>http://webservice.monitoring.ngsee.sti2.at/</monitoring.endpoint.namespace>
-		<monitoring.triplestore.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</monitoring.triplestore.endpoint>
+		<monitoring.triplestore.endpoint>${msee.sdp.sesame.endpoint}</monitoring.triplestore.endpoint>
 		<monitoring.triplestore.reposid>wsmf</monitoring.triplestore.reposid>
 		<monitoring.instance.prefixuri>http://sti2.at/wsmf/instances#</monitoring.instance.prefixuri>
-		<monitoring.ws.port>9124</monitoring.ws.port>
+		<monitoring.ws.port>${msee.sdp.port}</monitoring.ws.port>
 
 		<!-- Registration properties -->
-		<registration.sesame.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</registration.sesame.endpoint>
+		<registration.sesame.endpoint>${msee.sdp.sesame.endpoint}</registration.sesame.endpoint>
 		<registration.sesame.reposid>msee</registration.sesame.reposid>
-		<registration.ws.port>9125</registration.ws.port>
+		<registration.ws.port>${msee.sdp.port}</registration.ws.port>
 
 		<!-- Invocation properties -->
-		<invocation.sesame.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</invocation.sesame.endpoint>
+		<invocation.sesame.endpoint>${msee.sdp.sesame.endpoint}</invocation.sesame.endpoint>
 		<invocation.sesame.reposid>sesaRepo</invocation.sesame.reposid>
-		<invocation.ws.port>9126</invocation.ws.port>
+		<invocation.ws.port>${msee.sdp.port}</invocation.ws.port>
 
 		<!-- Management properties -->
-		<management.sesame.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</management.sesame.endpoint>
+		<management.sesame.endpoint>${msee.sdp.sesame.endpoint}</management.sesame.endpoint>
 		<management.sesame.reposid>sesaRepo</management.sesame.reposid>
-		<management.ws.port>9127</management.ws.port>
+		<management.ws.port>${msee.sdp.port}</management.ws.port>
 
 		<!-- Ranking properties -->
-		<ranking.ws.port>9128</ranking.ws.port>
+		<ranking.ws.port>${msee.sdp.port}</ranking.ws.port>
 
 	</properties>
 
@@ -344,6 +347,10 @@
 							<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
 								<war>${basedir}/invocation/invocation-webservice/target/invocation-webservice.war</war>
 								<contextPath>/invocation</contextPath>
+							</contextHandler>
+								<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+								<war>${basedir}/ranking/ranking-webservice/target/ranking-webservice.war</war>
+								<contextPath>/ranking</contextPath>
 							</contextHandler>
 						</contextHandlers>
 					</configuration>
