--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -2,26 +2,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>discovery-webservice</artifactId>
+	<artifactId>discovery.webservice</artifactId>
 	<packaging>war</packaging>
 
 	<parent>
-		<groupId>at.sti2.msee.discovery</groupId>
-		<artifactId>discovery-project</artifactId>
-		<version>1.2-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<groupId>at.sti2.msee.delivery</groupId>
+		<artifactId>discovery</artifactId>
+		<version>m16.1-SNAPSHOT</version>
 	</parent>
 
-	<name>discovery-webservice</name>
-	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
-
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
