--- a/pom.xml
+++ b/pom.xml
@@ -1,88 +1,68 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.msee</groupId>
-	<artifactId>sesa-project</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<groupId>at.sti2.msee.delivery</groupId>
+	<artifactId>platform</artifactId>
+	<version>m16.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-    
+
 	<modules>
 		<module>util</module>
-		<module>invocation</module>
 		<module>registration</module>
 		<module>discovery</module>
-		<module>monitoring</module>
-		<module>ranking</module>
+		
+		<!-- <module>invocation</module> -->
+		<!-- <module>monitoring</module> -->
+		<!-- <module>ranking</module> -->
 	</modules>
 
-	<name>sesa-project</name>
-	<url>http://sesa.sti2.at</url>
-
 	<properties>
-
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<cxf.version>2.4.1</cxf.version>
 		<saxon.version>8.7</saxon.version>
 		<axis.version>1.5.4</axis.version>
 
-		<!-- Tomcat settings -->
-		<tomcatserver.url>http://sesa.sti2.at:8080/manager/html</tomcatserver.url>
-		<tomcatserver.username>see</tomcatserver.username>
-		<tomcatserver.password>see-sti2</tomcatserver.password>
-
-		<msee.sdp.port>8080</msee.sdp.port>
-		<msee.sdp.sesame.endpoint>http://localhost:8082/openrdf-sesame</msee.sdp.sesame.endpoint>
+		<!-- Default properties -->
+		<default.port>8080</default.port>
+		<default.sesame.endpoint>http://localhost:8082/openrdf-sesame</default.sesame.endpoint>
 
 		<!-- Discovery properties -->
-		<discovery.repo>msee</discovery.repo>
-		<discovery.sesame.endpoint>${msee.sdp.sesame.endpoint}</discovery.sesame.endpoint>
-		<discovery.ws.port>${msee.sdp.port}</discovery.ws.port>
+		<discovery.sesame.endpoint>${default.sesame.endpoint}</discovery.sesame.endpoint>
+		<discovery.sesame.repository.name>msee</discovery.sesame.repository.name>
+		<discovery.port>${default.port}</discovery.port>
 
 		<!-- Monitoring properties -->
 		<monitoring.endpoint.servicename>ServiceName</monitoring.endpoint.servicename>
 		<monitoring.endpoint.namespace>http://webservice.monitoring.ngsee.sti2.at/</monitoring.endpoint.namespace>
-		<monitoring.triplestore.endpoint>${msee.sdp.sesame.endpoint}</monitoring.triplestore.endpoint>
+
+		<monitoring.triplestore.endpoint>${default.sesame.endpoint}</monitoring.triplestore.endpoint>
 		<monitoring.triplestore.reposid>wsmf</monitoring.triplestore.reposid>
+
 		<monitoring.instance.prefixuri>http://sti2.at/wsmf/instances#</monitoring.instance.prefixuri>
-		<monitoring.ws.port>${msee.sdp.port}</monitoring.ws.port>
+		<monitoring.ws.port>${default.port}</monitoring.ws.port>
 
 		<!-- Registration properties -->
-		<registration.sesame.endpoint>${msee.sdp.sesame.endpoint}</registration.sesame.endpoint>
+		<registration.sesame.endpoint>${default.sesame.endpoint}</registration.sesame.endpoint>
 		<registration.sesame.reposid>msee</registration.sesame.reposid>
-		<registration.ws.port>${msee.sdp.port}</registration.ws.port>
+		<registration.ws.port>${default.port}</registration.ws.port>
 
 		<!-- Invocation properties -->
-		<invocation.sesame.endpoint>${msee.sdp.sesame.endpoint}</invocation.sesame.endpoint>
+		<invocation.sesame.endpoint>${default.sesame.endpoint}</invocation.sesame.endpoint>
 		<invocation.sesame.reposid>sesaRepo</invocation.sesame.reposid>
-		<invocation.ws.port>${msee.sdp.port}</invocation.ws.port>
+		<invocation.ws.port>${default.port}</invocation.ws.port>
 
 		<!-- Management properties -->
-		<management.sesame.endpoint>${msee.sdp.sesame.endpoint}</management.sesame.endpoint>
+		<management.sesame.endpoint>${default.sesame.endpoint}</management.sesame.endpoint>
 		<management.sesame.reposid>sesaRepo</management.sesame.reposid>
-		<management.ws.port>${msee.sdp.port}</management.ws.port>
+		<management.ws.port>${default.port}</management.ws.port>
 
 		<!-- Ranking properties -->
-		<ranking.ws.port>${msee.sdp.port}</ranking.ws.port>
+		<ranking.ws.port>${default.port}</ranking.ws.port>
 
 	</properties>
-
-	<profiles>
-		<profile>
-			<id>localrun</id>
-			<properties> <!-- TODO: -->
-				<jdbc.url>jdbc:oracle:thin:@proddb01:1521:PROD</jdbc.url>
-				<jdbc.username>prod_user</jdbc.username>
-				<jdbc.password>s00p3rs3cr3t</jdbc.password>
-			</properties>
-		</profile>
-	</profiles>
-
-	<issueManagement>
-		<system>Redmine</system>
-		<url>http://redmine.sesa.sti2.at</url>
-	</issueManagement>
 
 	<organization>
 		<name>Semantic Technology Institute Innsbruck</name>
@@ -117,12 +97,6 @@
 			<url>http://maven.sti2.at/archiva/repository/external</url>
 		</repository>
 	</distributionManagement>
-
-	<scm>
-		<connection>scm:git:git@sesa.sti2.at:sesa-core.git</connection>
-		<!-- <url>scm:git:ssh://sesa.sti2.at:/var/scm/see/sesa.git</url> -->
-		<!-- <developerConnection>scm:git:git@github.com:tobrien/git-demo.git</developerConnection> -->
-	</scm>
 
 	<repositories>
 		<repository>
@@ -166,10 +140,10 @@
 			<name>phloc</name>
 			<url>http://repo.phloc.com/maven2/</url>
 		</repository>
-
 	</repositories>
 
 	<build>
+		<finalName>${groupId}.${artifactId}-${version}</finalName>
 		<!-- All childs inherit this plugins -->
 		<plugins>
 			<plugin>
@@ -273,6 +247,7 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.1</version>
 					<configuration>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
 						<!-- use local git repo -->
 						<pushChanges>false</pushChanges>
 						<localCheckout>true</localCheckout>
@@ -311,15 +286,6 @@
 				</plugin>
 
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-					<configuration>
-						<url>${tomcatserver.url}</url>
-						<username>${tomcatserver.username}</username>
-						<password>${tomcatserver.password}</password>
-					</configuration>
-				</plugin>
-				<plugin>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<configuration>
@@ -350,7 +316,7 @@
 								<war>${basedir}/invocation/invocation-webservice/target/invocation-webservice.war</war>
 								<contextPath>/invocation</contextPath>
 							</contextHandler>
-								<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+							<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
 								<war>${basedir}/ranking/ranking-webservice/target/ranking-webservice.war</war>
 								<contextPath>/ranking</contextPath>
 							</contextHandler>
@@ -360,28 +326,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	<dependencyManagement>
-		<dependencies>
-			<!-- TOOLS -->
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
-				<!-- Because the JDK1.6 already include the Java Activation API, otherwise 
-					this could generate ClassLoading en Linkage errors -->
-				<exclusions>
-					<exclusion>
-						<groupId>javax.activation</groupId>
-						<artifactId>activation</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.5</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
