--- a/registration/api/pom.xml
+++ b/registration/api/pom.xml
@@ -1,18 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  	<artifactId>registration-api</artifactId>
+  	<artifactId>registration.api</artifactId>
   	<packaging>jar</packaging>
   
     <parent>
-        <groupId>at.sti2.msee.registration</groupId>
-        <artifactId>registration-project</artifactId>
-        <version>1.2-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <groupId>at.sti2.msee.delivery</groupId>
+        <artifactId>registration</artifactId>
+        <version>m16.1-SNAPSHOT</version>
   	</parent>
-
-  	<name>registration-api</name>
-  	<url>http://maven.apache.org</url>
 
   	<properties>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
