--- a/util/triplestore-client/pom.xml
+++ b/util/triplestore-client/pom.xml
@@ -1,38 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>util.triplestore.client</artifactId>
+	<packaging>jar</packaging>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sesame.version>2.6.1</sesame.version>
 	</properties>
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>util-triplestore-client</artifactId>
-	<packaging>jar</packaging>
-	<name>util-triplestore-client</name>
-
 	<parent>
-		<groupId>at.sti2.msee.util</groupId>
-		<artifactId>util-project</artifactId>
-		<version>1.2-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<groupId>at.sti2.msee.delivery</groupId>
+		<artifactId>util</artifactId>
+		<version>m16.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-runtime</artifactId>
-			<version>${sesame.version}</version>
+			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqlxml</artifactId>
-			<version>${sesame.version}</version>
+			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqljson</artifactId>
-			<version>${sesame.version}</version>
+			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -53,7 +50,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.5</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
