IN PROGRESS - task 64: Unify for the ranking module http://redmine.sesa.sti2.at/issues/show/64
Poms and folders updated

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
 		<module>discovery</module>
 		<module>monitoring</module>
 		<module>invocation</module>
-		
-		<!-- <module>ranking</module> -->
+		<module>ranking</module>
 	</modules>
 
 	<properties>
