--- a/ranking/webservice/pom.xml
+++ b/ranking/webservice/pom.xml
@@ -2,18 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>ranking-webservice</artifactId>
+	<artifactId>ranking.webservice</artifactId>
 	<packaging>war</packaging>
 
 	<parent>
-		<groupId>at.sti2.msee.ranking</groupId>
-		<artifactId>ranking-project</artifactId>
-		<version>1.2-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<groupId>at.sti2.msee.delivery</groupId>
+		<artifactId>ranking</artifactId>
+		<version>m16.1-SNAPSHOT</version>
 	</parent>
 
-	<name>Ranking Engine - Web Services</name>
-	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
