--- a/ranking/core/pom.xml
+++ b/ranking/core/pom.xml
@@ -6,41 +6,42 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<artifactId>ranking-core</artifactId>
+	<artifactId>ranking.core</artifactId>
 	<packaging>jar</packaging>
-	<name>Ranking Engine - Core</name>
 
 	<parent>
-		<groupId>at.sti2.msee.ranking</groupId>
-		<artifactId>ranking-project</artifactId>
-		<version>1.2-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<groupId>at.sti2.msee.delivery</groupId>
+		<artifactId>ranking</artifactId>
+		<version>m16.1-SNAPSHOT</version>
 	</parent>
 
 
 	<dependencies>
 		<dependency>
-			<groupId>at.sti2.msee.ranking</groupId>
-			<artifactId>ranking-api</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<groupId>${project.parent.groupId}</groupId>
+			<version>${project.parent.version}</version>
+			<artifactId>ranking.api</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>at.sti2.msee.monitoring</groupId>
-			<artifactId>monitoring-api</artifactId>
+			<groupId>${project.parent.groupId}</groupId>
+			<version>${project.parent.version}</version>
+			<artifactId>monitoring.api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.msee.monitoring</groupId>
-			<artifactId>monitoring-core</artifactId>
+			<groupId>${project.parent.groupId}</groupId>
+			<version>${project.parent.version}</version>
+			<artifactId>monitoring.core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.msee.util</groupId>
-			<artifactId>util-triplestore-client</artifactId>
+			<groupId>${project.parent.groupId}</groupId>
+			<version>${project.parent.version}</version>
+			<artifactId>util.triplestore.client</artifactId>
 		</dependency>
-	
-	
-	
-	
+
+
+
+
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
@@ -76,7 +77,7 @@
 			<version>1.6.2</version>
 		</dependency>
 
-	
+
 	</dependencies>
 
 </project>
